# strawberry_django_project

./: db.sqlite3  manage.py  pyproject.toml
books/: schema.py  types.py
books/management/commands/: generate_schema.py
books/migrations/: 0001_initial.py
strawberry_django_project/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
